@@ -1,7 +1,10 @@
 package com.example.awesomefat.dungeonsanddatastructures;
 
-import java.util.ArrayList;
+import java.util.Dictionary;
+import java.util.Enumeration;
 import java.util.HashMap;
+import java.util.Hashtable;
+import java.util.LinkedList;
 import java.util.Map;
 
 /**
@@ -10,8 +13,8 @@ import java.util.Map;
 
 public class Room
 {
-    public ArrayList<Player> players;
-    public ArrayList<NPC> npcs;
+    //public LinkedList<Player> players;
+    //public LinkedList<NPC> npcs;
     public Map<String, Exit> exits;
     public String description;
     public String name;
@@ -22,23 +25,23 @@ public class Room
     {
         this.name = name;
         this.description = description;
-        this.players = new ArrayList<Player>();
-        this.npcs = new ArrayList<NPC>();
+        //this.players = new LinkedList<Player>();
+        //this.npcs = new LinkedList<NPC>();
         this.exits = new HashMap<String, Exit>();
     }
 
-
-    public ArrayList<Player> getPlayers() {
-        return players;
-    }
-
-    public ArrayList<NPC> getNpcs() {
-        return npcs;
-    }
-
-    public Map<String, Exit> getExits() {
-        return exits;
-    }
+//
+//    public LinkedList<Player> getPlayers() {
+//        return players;
+//    }
+//
+//    public LinkedList<NPC> getNpcs() {
+//        return npcs;
+//    }
+//
+//    public Hashtable<String, Exit> getExits() {
+//        return exits;
+//    }
 
     public String getDescription() {
         return description;
@@ -54,18 +57,18 @@ public class Room
         this.exits.put(direction, e);
     }
 
-    public boolean takeExit(String direction)
-    {
-        Exit temp = this.exits.get(direction);
-        if(temp != null)
-        {
-            return temp.takeExit(this.players.get(0));
-        }
-        else
-        {
-            return false;
-        }
-    }
+//    public boolean takeExit(String direction)
+//    {
+//        Exit temp = this.exits.get(direction);
+//        if(temp != null)
+//        {
+//            return temp.takeExit(this.players.getFirst());
+//        }
+//        else
+//        {
+//            return false;
+//        }
+//    }
 
     //Player management
     synchronized private void players_PerformAction(String action, Object[] params)
@@ -73,16 +76,16 @@ public class Room
         if(action.equals("addPlayer"))
         {
             Player temp = (Player)params[0];
-            this.players.add(temp);
-            temp.setCurrentRoomIndex(Core.theDungeon.findIndexOfRoom(this));
+            //this.players.add(temp);
+            temp.setCurrentRoom(this);
         }
         else if(action.equals("removePlayer"))
         {
             Player temp = (Player)params[0];
-            if(this.players.remove(temp))
-            {
-                temp.setCurrentRoomIndex(-1);
-            }
+//            if(this.players.remove(temp))
+//            {
+//                temp.setCurrentRoom(null);
+//            }
         }
     }
 
@@ -104,16 +107,16 @@ public class Room
         if(action.equals("addNPC"))
         {
             NPC temp = (NPC)params[0];
-            this.npcs.add(temp);
-            temp.setCurrentRoomIndex(Core.theDungeon.findIndexOfRoom(this));
+            //this.npcs.add(temp);
+            temp.setCurrentRoom(this);
         }
         else if(action.equals("removeNPC"))
         {
             NPC temp = (NPC)params[0];
-            if(this.npcs.remove(temp))
-            {
-                temp.setCurrentRoomIndex(-1);
-            }
+//            if(this.npcs.remove(temp))
+//            {
+//                temp.setCurrentRoom(null);
+//            }
         }
     }
 
